# sup-v2

./: .gitignore  README.md  pyproject.toml
src/apps/users/: factory_funcs.py
src/apps/users/data/: mappers.py
src/apps/users/data/entities/: role_entity.py
src/apps/users/data/models/: apps.py  models.py
src/apps/users/data/repositories/: role_repository.py
src/apps/users/data/repositories/real/: role_repository.py
src/apps/users/domain/entities/: role_entity.py
src/apps/users/domain/interactors/: role_interactor.py
src/apps/users/domain/repositories/: role_repository.py
src/apps/users/domain/repositories/real/: role_repository.py
src/config/: settings.py
