[tool.poetry]
name = "sup-v2"
version = "0.1.0"
description = ""
authors = ["Pavel Lashkov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
pre-commit = "^4.0.1"
psycopg2-binary = "^2.9.9"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
